src/assets/css/App.css
/* ... */
/* categories start */
.categories {
    margin: 100px 0;
}

.title h2 {
    font-weight: 800;
    font-size: 32px;
    color: #223263;
    width: fit-content;
    margin: 0 auto;
}

.title h2 span {
    position: relative;
}

.title h2 span::before {
    position: absolute;
    content: "";
    width: 64px;
    height: 64px;
    background: rgba(224, 46, 36, 0.18);
    border-radius: 50%;
    z-index: -1;
    top: -14px;
    left: -30px;
}

.title h2 span {
    font-size: 42px !important;
}

.categories .categories-card {
    background: #FFFFFF;
    border: 2px solid #EBF0FF;
    border-radius: 100px;
}

.categories .categories-card img {
    border-radius: 50%;
}

.categories .cate-text h6 {
    font-weight: 700;
    font-size: 20px;
    color: #223263;
}

.categories .cate-text p {
    font-weight: 700;
    font-size: 17px;
    color: #E02E24;
    margin-top: 8px;
}

.categories .categories-slider-img {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    width: 100%;
    background-color: #d3d3d35c;
    border-radius: 50%;
    overflow: hidden;
}

.categories .categories-slider-img img {
    width: 74% !important;
}

.stylist-card {
    border-radius: 15px;
    overflow: hidden;
}

.stylist-card1 {
    border-radius: 15px;
    overflow: hidden;
}

.stylist-card .discount {
    padding: 0px 6px 2px;
    background-color: #FFF2F2 !important;
    box-shadow: none !important;
    position: absolute;
    right: 10px;
    top: 10px;
    color: #223263 !important;
    font-size: 20px;
    font-weight: 600;
    /* display: flex;
    flex-direction: column; */
    border: 0;
}

.insta {
    background-color: transparent !important;
    border: none;
    box-shadow: none;
    position: absolute;
    bottom: 0px;
    font-size: 35px;
    right: 0px;
}

.stylist-card .desc {
    padding: 0px 15px;
    background-color: #FFF9F9;
}

.stylist-card .title {
    color: #223263;
    font-weight: 700;
    padding-top: 7px;
    font-size: 16px;
}

.stylist-card .group-price {
    color: #E02E24;
    font-weight: 700;
    margin-top: 5px;
    font-size: 13px;
}

.stylist-card .individual-price {
    color: rgba(224, 46, 36, 0.4);
    font-size: 13px;
}

.stylist-card .stock {
    color: #223263;
}

.stylist-card .progress {
    background-color: rgba(224, 46, 36, 0.4);
    height: 5px;
}

.stylist-card .progress .progress-bar {
    background-color: #E02E24;
}

.stylist .explore-card {
    width: 100%;
}

@media (max-width: 768px) {
    .title h2 {
        font-size: 26px;
    }

    .sale h4 {
        flex-direction: column;
        row-gap: 15px;
    }
}

/* categories end */

/* explore start */
.explore {
    margin: 100px 0;
}

.explore .explore-card,
.tabs-cos .explore-card {
    width: 280px;
}

.categories .explore-card {
    width: 215px;
}

.explore .btns {
    display: flex;
    align-items: center;
    column-gap: 15px;
    overflow: auto;
}

.explore .btns-home {
    display: flex;
    align-items: center;
    column-gap: 15px;
    overflow: auto;
}

.explore-main {
    display: flex;
    align-items: flex-start;
    column-gap: 15px;
    flex-wrap: wrap;
    justify-content: center;
}

.explore .btns button {
    border: 2px solid #EBF0FF !important;
    border-radius: 100px;
    padding: 10px 20px;
    background-color: transparent !important;
    font-weight: 700;
    font-size: 16px;
    color: #223263 !important;
    white-space: nowrap;
    outline: none;
}

.explore .btns button.active {
    border: 2px solid #7594F3 !important;
}

@media (max-width: 425px) {
    .explore .btns button {
        padding: 5px 15px;
    }
}

.explore .btns-home button {
    border: 2px solid #EBF0FF !important;
    border-radius: 100px;
    padding: 10px 20px;
    font-weight: 700;
    font-size: 16px;
    color: white !important;
    white-space: nowrap;
    outline: none;
}

.explore-card {
    width: 260px;
    margin-top: 20px;
}

.star-main img {
    width: 20px !important;
}

/* explore end */

/* footer start */
.footer {
    background-color: #071234;
    padding: 50px 0;
}

.footer .footer-box {
    width: 250px;
    margin-top: 30px;
}

.footer .footer-box h5,
.cards-all h5 {
    font-weight: 700;
    font-size: 18px;
    color: #7E97E2;
}

.footer .footer-box a {
    color: #fff;
    margin-bottom: 8px;
    text-decoration: none;
    display: block;
}

.footer .footer-working {
    display: flex;
    align-items: flex-start;
    column-gap: 20px;
    justify-content: space-between;
    flex-wrap: wrap;
}

.footer .last {
    text-align: center;
    margin-top: 80px;
    color: #fff;
}

@media (max-width: 650px) {
    .footer .last {
        margin-top: 50px;
    }

    .cards-all img {
        width: 100%;
    }
}

.pointer {
    cursor: pointer;
}

/* footer end */

/* shop-categories start */
.shop-categories,
.basket,
.tabs-cos,
.get-set {
    margin: 100px 0;
}

.shop-categories .cate-box {
    width: 213px;
    margin-top: 30px;
}

@media (max-width: 610px) {
    .cate-box {
        width: 45% !important;
    }

    .cate-main .cat-img-round {
        width: 100% !important;
    }

    .shop-categories .cate-main {
        gap: 18px !important;
    }

    .shop-categories .cate-box h5 {
        font-size: 15px !important;
        margin-top: 10px !important;
    }
}

.shop-categories .cate-main {
    row-gap: 20px !important;
}

.cate-main .cat-img-round {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    width: 220px;
    background-color: #d3d3d35c;
    border-radius: 50%;
    overflow: hidden;
}

.shop-categories .cate-box h5 {
    font-weight: 700;
    font-size: 22px;
    color: #223263;
}

.shop-categories .cate-box img {
    border-radius: 10px;
    width: 75%;
}
/* ... */

